samples/_failures_safe/1761713189_ec3f4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a196131.c: In function ‘main’:
./samples/SAFE/__tmp_2a196131.c:148:5: error: expected expression at end of input
  148 |     initialize_transition_table(&
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2a196131.c:148:5: error: expected declaration or statement at end of input
